openshift/base/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: aibeniq
    component: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aibeniq
      component: adminer
  template:
    metadata:
      labels:
        app: aibeniq
        component: adminer
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: adminer
          image: adminer:4.8.1
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - name: adminer-tmp
              mountPath: /tmp
            - name: adminer-var-tmp
              mountPath: /var/tmp
            - name: adminer-home
              mountPath: /var/www/html
      volumes:
        - name: adminer-tmp
          emptyDir: {}
        - name: adminer-var-tmp
          emptyDir: {}
        - name: adminer-home
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels:
    app: aibeniq
    component: adminer
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: aibeniq
    component: adminer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: adminer
  labels:
    app: aibeniq
    component: adminer
spec:
  host: redhat-adminer.aiben.io
  to:
    kind: Service
    name: adminer
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
